--- a/maketut/Makefile
+++ b/maketut/Makefile
@@ -1,6 +1,6 @@
 # Makefile
 CC=g++
-CCFLAGS=-c -std=c++11 -stdlib=libc++
+CCFLAGS=-c -Wall
 LDFLAGS=
 SOURCES=main.cpp factorial.cpp hello.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
@@ -8,13 +8,16 @@ EXECUTABLE=hello
 
 ifeq ($(OS),Windows_NT)
 	CC=g++
+	CCFLAGS=-c -Wall
 else
 	UNAME_S := $(shell uname -s)
 	ifeq ($(UNAME_S),Linux)
 		CC=g++
+		CCFLAGS=-c -Wall
 	endif
 	ifeq ($(UNAME_S),Darwin)
 		CC=clang++
+		CCFLAGS=-c -std=c++11 -stdlib=libc++
 	endif
 endif
 
